--- a/style.css
+++ b/style.css
@@ -58,7 +58,8 @@ nav ul {
 } 
 
 .hero {
-  background: url(http://www.elevationacademy.co/wp-content/uploads/2016/02/Tel-Aviv.jpg) no-repeat center fixed;
+  background: url(http://www.elevationacademy.co/wp-content/uploads/2016/02/Tel-Aviv.jpg)
+   no-repeat center fixed;
   background-size: cover;
   height: 700px;
   padding-top: 100px;
@@ -98,4 +99,73 @@ section {
 
 .column-inner {
   padding: 20px;
+}
+
+@media (max-width: 700px) {
+  .column {
+    width: 100%;
+  }
+}
+
+.column-70 {
+  width: 70%;
+  float: left;
+  height: 500px;
+}
+
+.bar{
+  background-color: white;
+  margin: 20px;
+}
+
+.image{
+  background: url(https://cdn.secrettelaviv.com/wp-content/uploads/2015/02/574797_504858709558529_1271845218_n-e1424102181856.jpg);
+  width: 100%;
+  height: 500px;
+  background-repeat: no-repeat;
+
+}
+
+
+.column-30 {
+  width: 30%;
+  float: left;
+  height: 500px;
+}
+
+.sidebar{
+  margin: 20px;
+  background-color: white;
+}
+
+.randome{
+  padding: 15px;
+  font-family: 'Indie Flower', cursive;
+}
+
+
+
+/*HACK!!!!*/
+
+.container:before, .row:before {
+  display: table;
+  content: "";
+}
+
+.container:after, .row:after {
+  display: table;
+  content: "";
+  clear: both;
+}
+
+@media (max-width: 700px) {
+  .column-70 {
+    width: 100%;
+  }
+}
+
+@media (max-width: 700px) {
+  .column-30 {
+    width: 100%;
+  }
 }
